[tool.poetry]
name = "voronoi-fortune-visualized"
version = "0.1.0"
description = ""
authors = ["Jaroslav Knotek <knotek@utia.cas.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.23.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
